--- a/admin.html
+++ b/admin.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Kitchen & Billing</title>
+<title>Billing</title>
 
 <style>
 body { font-family: Arial; background:#f2f2f2; padding:20px; }
@@ -172,3 +172,4 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
