--- a/admin.html
+++ b/admin.html
@@ -48,7 +48,7 @@ select, button { padding:8px 12px; font-size:14px; }
 
 <body>
 
-<h1>🍽️ Kitchen & Billing</h1>
+<h1>Gather & Game Cafe Billing</h1>
 <div id="orders"></div>
 
 <script>
@@ -172,4 +172,5 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
 
