--- a/admin-login.html
+++ b/admin-login.html
@@ -10,7 +10,7 @@
 function login() {
   if (document.getElementById("pin").value === "14022398") {
     sessionStorage.setItem("admin","yes");
-    location.href = "reports.html";
+    location.href = "admin.html";
   } else {
     alert("Wrong PIN");
   }
