--- a/reports.html
+++ b/reports.html
@@ -12,7 +12,7 @@
   if (!auth || !time || Date.now() - time > 30 * 60 * 1000) {
     localStorage.removeItem("admin_auth");
     localStorage.removeItem("admin_auth_time");
-    location.href = "admin-login.html";
+    location.href = "admin-login.html?redirect=reports.html";
   }
 })();
 </script>
@@ -94,7 +94,7 @@ function monthly() {
 function logout() {
   localStorage.removeItem("admin_auth");
   localStorage.removeItem("admin_auth_time");
-  location.href = "admin-login.html";
+  location.href = "admin-login.html?redirect=reports.html";
 }
 </script>
 
