--- a/admin-login.html
+++ b/admin-login.html
@@ -10,7 +10,7 @@
 function login() {
   const pin = document.getElementById("pin").value;
 
-  if (pin === "1234") { // change PIN
+  if (pin === "14022398") { // change PIN
     localStorage.setItem("admin_auth", "true");
     localStorage.setItem("admin_auth_time", Date.now());
 
